--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">Message To Speech</string>
-    <string name="sms_message"> From : %1$s<br/>%2$s</string>
+    <string name="sms_message"> From : %1$s: %2$s</string>
 </resources>
